# DomTerm

./: .codeclimate.yml  .eslintrc  .gitignore  .travis.yml  Architecture.md  COPYING  Makefile  Makefile.am  Makefile.in  Protocol.md  README-xtermjs.md  README.md  TODO.md  bililiteRange.js  configure  configure.ac  domterm-client.js  domterm-jar-manifest  domterm.appdata.xml  domterm.desktop  domterm.spec  jfx-term.html  manifest.json  package.json  qtdomterm.appdata.xml  qtdomterm.desktop  repl-client.html  repl-client.html.in  terminal.js  wsdomterm-jar-manifest
autom4te.cache/: output.0  requests  traces.0
d/: domterm  domterm.ti
doc/: DomTerm.icns  DomTerm.texi  domterm.man  dt-util.man  ldomterm.man  qtdomterm.man  webdoc.patch
doc/help/: domterm-attach.adoc  domterm-browse.adoc  domterm-hcat.adoc  domterm-imgcat.adoc  domterm-is-domterm.adoc  domterm-list.adoc  domterm-new.adoc  domterm-window-specifier.adoc  domterm.adoc  domterm.rst  imgcat.adoc  imgcat.rst  qtdomterm.adoc  qtdomterm.rst  window-specifier.adoc  window-specifier.rst
doc/misc/: dt-prettynested-saved.html
doc/style/: docbook-to-html.xsl  domterm.xsl
dt-wry/: Cargo.toml  Cargo.toml.in
dt-wry/src/: main.rs
electron/: main.js  package.json  preload.js
electron-nodepty/: README.md  logging.js  main.js  package.json  preload.js  renderer.js  settings.js
hlib/: bililiteRange.js  browserkeymap.js  closure-externs.js  commands.js  domterm-client.js  domterm-core.css  domterm-default.css  domterm-findtext.js  domterm-layout.css  domterm-layout.js  domterm-menus.js  domterm-overlays.js  domterm-paging.js  domterm-parser.js  domterm-saved.js  domterm-standard.css  domterm-utils.js  domterm-version.js.in  domterm.js  dt-combined.patch  ghterminal.js  goldenlayout-base.css  goldenlayout-light-theme.css  goldenlayout.js  jsMenus.css  jsMenus.js  macos-traffic-lights.css  mark.es6.js  node-sixel.js  nwjs-menu-browser.css  nwjs-menu-browser.js  settings-manager.js  sixel-decode.js  terminal.js  wcwidth.js  xterminal.js
hlib/goldenlayout/css/: goldenlayout-base.css
hlib/goldenlayout/css/themes/: goldenlayout-dark-theme.css  goldenlayout-light-theme.css
hlib/sixel/: Colors.js  SixelDecoder.js
hlib/unicode/: uc-properties.js
hlib/unicode/tiny-inflate/: index.mjs
hlib/unicode/unicode-trie/: index.mjs  swap.mjs
lws-term/: LICENSE  Makefile.am  command-connect.c  command-connect.cc  command-connect.h  commands.c  commands.cc  frontends.cc  help.c  help.cc  http.c  http.cc  io.c  junzip.c  junzip.h  option-names.h  protocol.c  protocol.cc  server.c  server.cc  server.h  settings.c  settings.cc  utils.c  utils.cc  utils.h  version.h.in  whereami.c
native/: dt-libclip.cc  preloads.cc  webview.cc
native/pty/: apue.h  error.c  pty.c  pty_fork.c
org/domterm/: Backend.java  ClassBackend.java  ClassClient.java  Client.java  DomHttpServer.java  ProcessBackend.java  ProcessClient.java  repl.html
org/domterm/javafx/: Main.java  RunClass.java  RunProcess.java  WebTerminal.java  WebTerminalApp.java  WebWriter.java
org/domterm/pty/: PTY.java  PtyBackend.java  PtyClient.java  RunPty.java
org/domterm/util/: DomTermErrorStream.java  DomTermErrorWriter.java  ErrorPrintStream.java  PrintNested.java  StringBufferedWriter.java  StyleSheets.java  Utf8WriterOutputStream.java  Util.java  WTDebug.java
org/domterm/websocket/: DomServer.java
ptyconsole/: App.java  Makefile  PTY.java  PtyClient.java  PtyConsole.java  Util.java  pty.c  ptyconsole_PTY.h
qtdomterm/: LICENSE  Makefile.am  Pty.cpp  autotroll.m4  backend.cpp  backend.h  browserapplication.cpp  browserapplication.h  browsermainwindow.cpp  browsermainwindow.h  dt_version.h.in  main.cpp  processoptions.h  qtdomterm.desktop  qtdomterm.pro  savepagedialog.cpp  savepagedialog.h  savepagedialog.ui  settings.cpp  settings.h  settings.ui  tabwidget.cpp  tabwidget.h  webview.cpp  webview.h
qtdomterm/data/: data.qrc  index.html
qtdomterm/data/hlib/: domterm-client.js
style/: domterm-core.css  domterm-default.css
tests/: 24-bit-color.sh  256-colors.sh  Makefile.am  UTF-8-width.exp  UTF-8.txt  colors_and_formatting.sh  grapheme-widths.exp  grapheme-widths.sh  t24.exp  test-bash-rc.sh  test-defs.sh  test-view1.sh  test-wrap1.sh  vtest-1-a.exp  vtest-1-b.exp  vtest-1-c.exp  vtest-1-d.exp  vtest-1-e.exp  vtest-1-f.exp  vtest-11-6-6-3-a.exp  vtest-11-6-6-3-b.exp  vtest-11-6-6-3-c.exp  vtest-11-6-6-3-d.exp  vtest-11-6-6-3-e.exp  vtest-11-6-6-3-f.exp  vtest-11-6-6-3-g.exp  vtest-11-6-6-3-h.exp  vtest-11-6-6-3-i.exp  vtest-11-6-6-3-j.exp  vtest-11-6-6-3-k.exp  vtest-11-6-6-3-l.exp  vtest-11-6-6-3-m.exp  vtest-11-6-6-3-n.exp  vtest-11-6-6-3-o.exp
tools/: domterm.ti  shell-integration.bash  shell-integration.fish  shell-integration.zsh  wrap-saved
tools/python/: README
tools/python/domterm/: matplot.py  utils.py
util/: imgcat  macOS.plist.in  svgcat
web/style/: domterm-1col.css  domterm-l.css  domterm-r.css  dt-manual.js  kawa.css  utils.js
webapp/: background.js
websocketterm/: ReplServer.java  WebSocketServer.java
webterminal/: Client.java  ShellConsole.java  WTDebug.java  WebTerminal.java  WebWriter.java  repl.html
xulapp/: application.ini  chrome.manifest  domterm.xul
xulapp/chrome/content/: domterm.xul
xulapp/defaults/preferences/: prefs.js
